# it-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLAUDE_CONTEXT.md  CLAUDE_PROJECT_PROMPT.md  LICENSE  Makefile  PORTAL_AGENT_BUILDER_Phase 4A.md  PORTAL_AGENT_BUILDER_Phase 4B-1.md  PORTAL_AGENT_BUILDER_Phase 4B-2.md  PORTAL_AGENT_BUILDER_Phase 4B-3.md  PORTAL_AGENT_BUILDER_Phase 4B-4.md  README.md  ROADMAP.md  SPRINT3_COMPLETE.md  SPRINT3_STATUS.md  docker-compose.yml
agent/: .dockerignore  Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt
agent/certs/ca-trust/: dc-ldaps.crt  toolserver.crt
agent/scripts/: create_test_tickets.py  test_admin_config.py  test_admin_integration.py  test_classifier_integration.py  test_ollama_integration.py  test_pipeline_integration.py  test_software_classify.py  test_software_llm_classify.py
agent/src/agent/: __init__.py  main.py
agent/src/agent/classifier/: README.md  __init__.py  classifier.py  models.py  prompts.py
agent/src/agent/classifier/tests/: __init__.py  test_classifier.py  test_prompts.py
agent/src/agent/config/: admin_client.py
agent/src/agent/drivers/: __init__.py  factory.py
agent/src/agent/pipeline/: __init__.py  config.py  executor.py
agent/src/agent/pipeline/handlers/: __init__.py  base.py  file_permission.py  group_access.py  password_reset.py
agent/src/agent/pipeline/tests/: conftest.py  test_executor.py  test_handlers.py
agent/src/agent/routing/: __init__.py  models.py  router.py
agent/src/agent/rulesets/: __init__.py
agent/src/agent/runtime/: __init__.py  cert_renewal.py  cli.py  condition_evaluator.py  config_loader.py  execution_context.py  models.py  runner.py  utils.py  validators.py  workflow_engine.py
agent/src/agent/runtime/executors/: __init__.py  approval.py  base.py  clarify.py  classify.py  end.py  escalate.py  execute.py  notify.py  query.py  registry.py  sub_workflow.py  trigger.py  update_ticket.py  validate.py
agent/src/agent/structures/: __init__.py
agent/src/agent/tools/: __init__.py  base.py  file_permissions.py  group_management.py  password_reset.py
agent/tests/config/: test_admin_client_cert_fetch.py
agent/tests/runtime/: TESTING.md  conftest.py  mock_drivers.py  run_tests.py  test_approval_executor.py  test_cert_renewal.py  test_classify_dynamic.py  test_condition_evaluator.py  test_e2e_workflow.py  test_executors.py  test_integrations.py  test_live_integration.py  test_runner_config_refresh.py
agent/tests/tools/: test_base_tool_mtls.py
config/: agent.yaml.example  (+2 more)
tool-server/python/: pyproject.toml
tool-server/python/scripts/: test_file_permissions_integration.py  test_groups_integration.py  test_integration.py
tool-server/python/src/tool_server/: __init__.py  config.py  main.py
tool-server/python/tests/: __init__.py  conftest.py  test_ad_service.py  test_ad_service_groups.py  test_config.py  test_groups_api.py  test_models.py  test_routes.py
(+598 files in other folders)
