[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lucid-tool-server"
version = "0.1.0"
description = "Tool server for Lucid IT Agent"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    { name = "Alton Lord" }
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "ldap3>=2.9.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pywinrm>=0.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tool_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
